data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1888.wast
;; 9. **Test Case 9**:    - **Description**: Employ a `block` with operand types `[i32, f32]` and use `br_if` to check multiple nested labels within the block, supplying arguments that mismatch these types.    - **Constraint**: Ensures proper type-checking logic for stacked values when conditionally branching to different label targets within a complex block.

(assert_invalid
 (module
  (func $test-case-9
   (block (result i32 f32)
    (block (br_if 0 (f32.const 0.0) (i32.const 1)))
   )
  )
 )
 "type mismatch"
)